Template/darkerfx_custom/styles/custom.css
/*

NOTE:
Contains custom CSS and also CSS Overrides based on all the other CSS files.

*/

:root,
body.theme-dark {
    --theme-code-block-default: #CCC;
    --theme-inline-code: #ffce76;
    --theme-alert-code-border: #404040;
    --theme-code-header-background: #2d2d30;
    --theme-code-header-forecolor: #e3e3e3;
    --theme-code-header-border: #404040;
    --theme-code-header-highlight: #6a360b;
    --theme-code-highlight-color:#514e0f;
}

body.theme-light {
    --theme-code-block-default: #333;
    --theme-inline-code: #c7254e;
    --theme-background-navbar: #f1f1f1;
    --theme-alert-code-border: #c9c9c9;
    --theme-code-header-background: #f2f2f2;
    --theme-code-header-forecolor: #171717;
    --theme-code-header-border: #e3e3e3;
    --theme-code-header-highlight: #fafafa;
    --theme-code-highlight-color:#efefdc;
}

article h4 {
    border-bottom: none;
}

.footer {
    border-top: none;
    background-color: inherit;
}

footer {
    padding: 10px;
}

blockquote {
    font-style: normal;
}

pre {
    border-radius: 0;
}

pre code {
    color: var(--theme-code-block-default);
}

article p img {
    display: block;
    margin: auto;
    border-width: 1px;
}

/* 
Since we cannot identify a parent based on a child ("code.lang-text") 
I can only assume that a "pre" will mean there is a code block to follow. 
*/
div.alert pre {
    border: 1px solid var(--theme-alert-code-border);
}

.content p a {
    text-decoration: underline;
}

.content p a.featherlight-image {
    text-decoration: none;
}

.content a code {
    background-color: var(--theme-inline-code-background);
    color: var(--theme-inline-code);
    text-decoration: underline;
}

.featherlight .featherlight-content {
    background: var(--theme-body-background);
}

div.sideaffix {
    bottom: 0 !important;
}

.sideaffix {
    width: auto;
}

.sideaffix.shiftup {
    bottom: 61px !important;
}

.bs-docs-sidenav {
    width: 100%;
}

.affix ul>li.active>ul,
.affix ul>li.active>a:before,
.affix ul>li>a:hover:before {
    white-space: normal;
}

.theme-light .navbar.navbar-fixed-top {
    background-color: white;
    border-bottom: 1px solid lightgray;
}

.theme-dark .navbar-brand.theme-light {
    display: none;
}

.theme-light .navbar-brand.theme-dark {
    display: none;
}

.navbar-brand {
    height: auto;
}

.navbar-brand img {
    width: 300px;
    height: auto;
}

.navbar-inverse {
    padding-top: 20px;
    min-height: 73px;
}

.navbar-form {
    margin-top: 0px;
}

.hide-when-search.container {
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
    max-width: 100%;
    width: 100%;
}

.body-content.container {
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
    max-width: 100%;
    width: 100%;
}

.article.grid-right {
    margin-left: 315px;
}

.sidefilter {
    top: 113px;
    width: 400px;
    margin-left: -15px;
}
  
.sidetoc {
    top: 173px;
    width: 400px;
    margin-left: -15px;
}

.sidetoc a {
    white-space: nowrap;          
    overflow: hidden;             
    text-overflow: ellipsis;      
}

.sidetoc.shiftup {
    bottom: 61px;
}

.toc {
    margin-left: 20px;
}

@media screen and (max-width: 992px) {
    .col-md-10 {
        width: 100%;
    }
}

@media screen and (max-width: 500px) {
    p {
        text-align: justify;
    }
}

@media (min-width: 1200px) {
    .container {
        max-width: 1140px;
    }
}

@media only screen and (max-width: 768px){
    .article.grid-right {
        margin-left: 0;
    }
}

@media (min-width: 1200px) {
    .article.grid-right {
        margin-left: 26%;
        margin-right: 8.3%
    }
}

@media (max-width: 1500px) {
    .col-md-10 {
        padding-left: 100px;
    }
}

/* 
CODE COPY LINK
https://github.com/dotnet/docfx/issues/5103#issuecomment-658849100 
*/

.code-header {
    box-sizing: content-box;
    background-color: var(--theme-code-header-background);
    color: var(--theme-code-header-forecolor);
    display: flex;
    flex-direction: row;
    border: 1px solid var(--theme-code-header-border);
    border-bottom: 0;
    margin-top: 16px;
    min-height: 30px;
}
  
.tabGroup section[role="tabpanel"] .code-header {
    margin-left: -16px;
    margin-right: -16px;
}

.tabGroup section[role="tabpanel"] .code-header:first-child {
    margin-top: -16px;
}

.code-header > .language {
    padding: 2px 16px;
    flex-grow: 1;
    text-transform: uppercase;
    line-height: 26px;
}

.code-header > .action {
    position: relative;
    padding: 2px 10px;
    background-color: transparent;
    border: 0 solid var(--theme-code-header-border);
    border-left-width: 1px;
    color: var(--theme-code-header-forecolor);
    cursor: pointer;
    display: flex;
    align-items: center;
    line-height: normal;
}

.code-header .glyphicon {
    margin-right: 0.25em;
}

.code-header > .action:hover {
    background-color: var(--theme-code-header-highlight);
}

.code-header + pre {
    margin-top: 0;
    border: 1px solid var(--theme-code-header-border);
}

.code-header > .action .successful-copy-alert {
    justify-content: center;
    align-items: center;
    right: 0;
    left: 0;
    bottom: 0;
    top: 0;
    position: absolute;
    display: flex;
    background-color: #128712;
    outline-color: #fff;
    color: #fff;
}

.code-header > .action .successful-copy-alert.is-transparent {
    opacity: 0;
    transition: 500ms opacity ease-in-out;
}

pre > code .line-highlight{
    background-color: var(--theme-code-highlight-color);
}

